--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,6 @@ board = esp32dev
 framework = arduino
 lib_ldf_mode = deep+
 board_build.partitions = min_spiffs.csv
+lib_deps = jchristensen/DS3232RTC@^2.0.1
+           zinggjm/GxEPD2@^1.6.4
+           adafruit/Adafruit GFX Library@^1.12.1
